@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,6 +24,7 @@
 
 /*
  * @test id=scope
+ * @enablePreview
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * @modules jdk.incubator.foreign/jdk.internal.foreign
  * @build NativeTestHelper CallGeneratorHelper TestUpcall
@@ -35,21 +36,9 @@
  */
 
 /*
- * @test id=no_scope
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @modules jdk.incubator.foreign/jdk.internal.foreign
- * @build NativeTestHelper CallGeneratorHelper TestUpcall
- *
- * @run testng/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:-VerifyDependencies
- *   --enable-native-access=ALL-UNNAMED -Dgenerator.sample.factor=17
- *   -DUPCALL_TEST_TYPE=NO_SCOPE
- *   TestUpcall
- */
-
-/*
  * @test id=async
+ * @enablePreview
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @modules jdk.incubator.foreign/jdk.internal.foreign
  * @build NativeTestHelper CallGeneratorHelper TestUpcall
  *
  * @run testng/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:-VerifyDependencies
@@ -58,19 +47,31 @@
  *   TestUpcall
  */
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.NativeSymbol;
-import jdk.incubator.foreign.SegmentAllocator;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
+/*
+ * @test id=stack
+ * @enablePreview
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcall
+ *
+ * @run testng/othervm -XX:+IgnoreUnrecognizedVMOptions -XX:-VerifyDependencies
+ *   --enable-native-access=ALL-UNNAMED -Dgenerator.sample.factor=17
+ *   -DUPCALL_TEST_TYPE=STACK
+ *   TestUpcall
+ */
 
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.CLinker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.NativeSymbol;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ResourceScope;
+
 import org.testng.SkipException;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
+import java.lang.foreign.SegmentAllocator;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
@@ -81,28 +82,27 @@ import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static java.lang.invoke.MethodHandles.insertArguments;
 import static org.testng.Assert.assertEquals;
-
 
 public class TestUpcall extends CallGeneratorHelper {
 
     private enum TestType {
         SCOPE,
-        NO_SCOPE,
-        ASYNC
+        ASYNC,
+        STACK
     }
 
     private static final TestType UPCALL_TEST_TYPE = TestType.valueOf(System.getProperty("UPCALL_TEST_TYPE"));
 
     static {
         System.loadLibrary("TestUpcall");
+        System.loadLibrary("TestUpcallStack");
         System.loadLibrary("AsyncInvokers");
     }
     static CLinker abi = CLinker.systemCLinker();
-
-    static final SymbolLookup LOOKUP = SymbolLookup.loaderLookup();
 
     static MethodHandle DUMMY;
     static MethodHandle PASS_AND_SAVE;
@@ -111,7 +111,7 @@ public class TestUpcall extends CallGeneratorHelper {
         try {
             DUMMY = MethodHandles.lookup().findStatic(TestUpcall.class, "dummy", MethodType.methodType(void.class));
             PASS_AND_SAVE = MethodHandles.lookup().findStatic(TestUpcall.class, "passAndSave",
-                    MethodType.methodType(Object.class, Object[].class, AtomicReference.class));
+                    MethodType.methodType(Object.class, Object[].class, AtomicReference.class, int.class));
         } catch (Throwable ex) {
             throw new IllegalStateException(ex);
         }
@@ -135,7 +135,7 @@ public class TestUpcall extends CallGeneratorHelper {
 
         List<Consumer<Object>> returnChecks = new ArrayList<>();
         List<Consumer<Object[]>> argChecks = new ArrayList<>();
-        NativeSymbol addr = LOOKUP.lookup(fName).get();
+        NativeSymbol addr = this.getClass().getClassLoader().findNative(fName).get();
         try (ResourceScope scope = ResourceScope.newConfinedScope()) {
             SegmentAllocator allocator = SegmentAllocator.newNativeArena(scope);
             MethodHandle mh = downcallHandle(abi, addr, allocator, function(ret, paramTypes, fields));
@@ -152,9 +152,10 @@ public class TestUpcall extends CallGeneratorHelper {
     @Test(dataProvider="functions", dataProviderClass=CallGeneratorHelper.class)
     public void testUpcallsAsync(int count, String fName, Ret ret, List<ParamType> paramTypes, List<StructFieldType> fields) throws Throwable {
         checkSelected(TestType.ASYNC);
+
         List<Consumer<Object>> returnChecks = new ArrayList<>();
         List<Consumer<Object[]>> argChecks = new ArrayList<>();
-        NativeSymbol addr = LOOKUP.lookup(fName).get();
+        NativeSymbol addr = this.getClass().getClassLoader().findNative(fName).get();
         try (ResourceScope scope = ResourceScope.newSharedScope()) {
             SegmentAllocator allocator = SegmentAllocator.newNativeArena(scope);
             FunctionDescriptor descriptor = function(ret, paramTypes, fields);
@@ -180,22 +181,42 @@ public class TestUpcall extends CallGeneratorHelper {
         }
     }
 
+    @Test(dataProvider="functions", dataProviderClass=CallGeneratorHelper.class)
+    public void testUpcallsStack(int count, String fName, Ret ret, List<ParamType> paramTypes, List<StructFieldType> fields) throws Throwable {
+        checkSelected(TestType.STACK);
+
+        List<Consumer<Object>> returnChecks = new ArrayList<>();
+        List<Consumer<Object[]>> argChecks = new ArrayList<>();
+        NativeSymbol addr = this.getClass().getClassLoader().findNative("s" + fName).get();
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+            SegmentAllocator allocator = SegmentAllocator.newNativeArena(scope);
+            MethodHandle mh = downcallHandle(abi, addr, allocator, functionStack(ret, paramTypes, fields));
+            Object[] args = makeArgsStack(scope, ret, paramTypes, fields, returnChecks, argChecks);
+            Object[] callArgs = args;
+            Object res = mh.invokeWithArguments(callArgs);
+            argChecks.forEach(c -> c.accept(args));
+            if (ret == Ret.NON_VOID) {
+                returnChecks.forEach(c -> c.accept(res));
+            }
+        }
+    }
+
     private static final Map<String, MethodHandle> INVOKERS = new HashMap<>();
 
     private MethodHandle asyncInvoker(Ret ret, ParamType returnType, List<StructFieldType> fields) {
         if (ret == Ret.VOID) {
             String name = "call_async_V";
             return INVOKERS.computeIfAbsent(name, symbol ->
-                abi.downcallHandle(
-                    LOOKUP.lookup(symbol).orElseThrow(),
-                        FunctionDescriptor.ofVoid(C_POINTER)));
+                    abi.downcallHandle(
+                            this.getClass().getClassLoader().findNative(symbol).orElseThrow(),
+                            FunctionDescriptor.ofVoid(C_POINTER)));
         }
 
         String name = "call_async_" + returnType.name().charAt(0)
                 + (returnType == ParamType.STRUCT ? "_" + sigCode(fields) : "");
 
         return INVOKERS.computeIfAbsent(name, symbol -> {
-            NativeSymbol invokerSymbol = LOOKUP.lookup(symbol).orElseThrow();
+            NativeSymbol invokerSymbol = this.getClass().getClassLoader().findNative(symbol).orElseThrow();
             MemoryLayout returnLayout = returnType.layout(fields);
             FunctionDescriptor desc = FunctionDescriptor.of(returnLayout, C_POINTER);
 
@@ -203,41 +224,64 @@ public class TestUpcall extends CallGeneratorHelper {
         });
     }
 
+    static FunctionDescriptor functionStack(Ret ret, List<ParamType> params, List<StructFieldType> fields) {
+        return function(ret, params, fields, STACK_PREFIX_LAYOUTS);
+    }
+
     static FunctionDescriptor function(Ret ret, List<ParamType> params, List<StructFieldType> fields) {
+        return function(ret, params, fields, List.of());
+    }
+
+    static FunctionDescriptor function(Ret ret, List<ParamType> params, List<StructFieldType> fields, List<MemoryLayout> prefix) {
         List<MemoryLayout> paramLayouts = params.stream().map(p -> p.layout(fields)).collect(Collectors.toList());
         paramLayouts.add(C_POINTER); // the callback
-        MemoryLayout[] layouts = paramLayouts.toArray(new MemoryLayout[0]);
+        MemoryLayout[] layouts = Stream.concat(prefix.stream(), paramLayouts.stream()).toArray(MemoryLayout[]::new);
         return ret == Ret.VOID ?
                 FunctionDescriptor.ofVoid(layouts) :
-                FunctionDescriptor.of(layouts[0], layouts);
+                FunctionDescriptor.of(layouts[prefix.size()], layouts);
+    }
+
+    static Object[] makeArgsStack(ResourceScope scope, Ret ret, List<ParamType> params, List<StructFieldType> fields, List<Consumer<Object>> checks, List<Consumer<Object[]>> argChecks) throws ReflectiveOperationException {
+        return makeArgs(scope, ret, params, fields, checks, argChecks, STACK_PREFIX_LAYOUTS);
     }
 
     static Object[] makeArgs(ResourceScope scope, Ret ret, List<ParamType> params, List<StructFieldType> fields, List<Consumer<Object>> checks, List<Consumer<Object[]>> argChecks) throws ReflectiveOperationException {
-        Object[] args = new Object[params.size() + 1];
-        for (int i = 0 ; i < params.size() ; i++) {
-            args[i] = makeArg(params.get(i).layout(fields), checks, i == 0);
+        return makeArgs(scope, ret, params, fields, checks, argChecks, List.of());
+    }
+
+    static Object[] makeArgs(ResourceScope scope, Ret ret, List<ParamType> params, List<StructFieldType> fields, List<Consumer<Object>> checks, List<Consumer<Object[]>> argChecks, List<MemoryLayout> prefix) throws ReflectiveOperationException {
+        Object[] args = new Object[prefix.size() + params.size() + 1];
+        int argNum = 0;
+        for (MemoryLayout layout : prefix) {
+            args[argNum++] = makeArg(layout, null, false);
         }
-        args[params.size()] = makeCallback(scope, ret, params, fields, checks, argChecks);
+        for (int i = 0 ; i < params.size() ; i++) {
+            args[argNum++] = makeArg(params.get(i).layout(fields), checks, i == 0);
+        }
+        args[argNum] = makeCallback(scope, ret, params, fields, checks, argChecks, prefix);
         return args;
     }
 
-    @SuppressWarnings("unchecked")
-    static NativeSymbol makeCallback(ResourceScope scope, Ret ret, List<ParamType> params, List<StructFieldType> fields, List<Consumer<Object>> checks, List<Consumer<Object[]>> argChecks) {
+    static NativeSymbol makeCallback(ResourceScope scope, Ret ret, List<ParamType> params, List<StructFieldType> fields, List<Consumer<Object>> checks, List<Consumer<Object[]>> argChecks, List<MemoryLayout> prefix) {
         if (params.isEmpty()) {
             return dummyStub;
         }
 
         AtomicReference<Object[]> box = new AtomicReference<>();
-        MethodHandle mh = insertArguments(PASS_AND_SAVE, 1, box);
-        mh = mh.asCollector(Object[].class, params.size());
+        MethodHandle mh = insertArguments(PASS_AND_SAVE, 1, box, prefix.size());
+        mh = mh.asCollector(Object[].class, prefix.size() + params.size());
+
+        for(int i = 0; i < prefix.size(); i++) {
+            mh = mh.asType(mh.type().changeParameterType(i, carrier(prefix.get(i), false)));
+        }
 
         for (int i = 0; i < params.size(); i++) {
             ParamType pt = params.get(i);
             MemoryLayout layout = pt.layout(fields);
             Class<?> carrier = carrier(layout, false);
-            mh = mh.asType(mh.type().changeParameterType(i, carrier));
+            mh = mh.asType(mh.type().changeParameterType(prefix.size() + i, carrier));
 
-            final int finalI = i;
+            final int finalI = prefix.size() + i;
             if (carrier == MemorySegment.class) {
                 argChecks.add(o -> assertStructEquals((MemorySegment) box.get()[finalI], (MemorySegment) o[finalI], layout));
             } else {
@@ -250,21 +294,21 @@ public class TestUpcall extends CallGeneratorHelper {
         Class<?> firstCarrier = carrier(firstlayout, true);
 
         if (firstCarrier == MemorySegment.class) {
-            checks.add(o -> assertStructEquals((MemorySegment) box.get()[0], (MemorySegment) o, firstlayout));
+            checks.add(o -> assertStructEquals((MemorySegment) box.get()[prefix.size()], (MemorySegment) o, firstlayout));
         } else {
-            checks.add(o -> assertEquals(o, box.get()[0]));
+            checks.add(o -> assertEquals(o, box.get()[prefix.size()]));
         }
 
         mh = mh.asType(mh.type().changeReturnType(ret == Ret.VOID ? void.class : firstCarrier));
 
-        MemoryLayout[] paramLayouts = params.stream().map(p -> p.layout(fields)).toArray(MemoryLayout[]::new);
+        MemoryLayout[] paramLayouts = Stream.concat(prefix.stream(), params.stream().map(p -> p.layout(fields))).toArray(MemoryLayout[]::new);
         FunctionDescriptor func = ret != Ret.VOID
                 ? FunctionDescriptor.of(firstlayout, paramLayouts)
                 : FunctionDescriptor.ofVoid(paramLayouts);
         return abi.upcallStub(mh, func, scope);
     }
 
-    static Object passAndSave(Object[] o, AtomicReference<Object[]> ref) {
+    static Object passAndSave(Object[] o, AtomicReference<Object[]> ref, int retArg) {
         for (int i = 0; i < o.length; i++) {
             if (o[i] instanceof MemorySegment) {
                 MemorySegment ms = (MemorySegment) o[i];
@@ -274,7 +318,7 @@ public class TestUpcall extends CallGeneratorHelper {
             }
         }
         ref.set(o);
-        return o[0];
+        return o[retArg];
     }
 
     static void dummy() {
