@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,8 +24,8 @@
 
 /*
  * @test
+ * @enablePreview
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @modules jdk.incubator.foreign/jdk.internal.foreign
  *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
@@ -37,15 +37,12 @@
  *   TestUpcallStructScope
  */
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.NativeSymbol;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.CLinker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.NativeSymbol;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ResourceScope;
 import org.testng.annotations.Test;
 
 import java.lang.invoke.MethodHandle;
@@ -70,9 +67,8 @@ public class TestUpcallStructScope extends NativeTestHelper {
 
     static {
         System.loadLibrary("TestUpcallStructScope");
-        SymbolLookup lookup = SymbolLookup.loaderLookup();
         MH_do_upcall = LINKER.downcallHandle(
-            lookup.lookup("do_upcall").get(),
+                TestUpcallStructScope.class.getClassLoader().findNative("do_upcall").get(),
                 FunctionDescriptor.ofVoid(C_POINTER, S_PDI_LAYOUT)
         );
 
